fixed menu items no longer affected by address bar shifting, added company logo to menu

--- a/components/Menu/styles.module.css
+++ b/components/Menu/styles.module.css
@@ -7,12 +7,12 @@
   max-height: 100vh;
   background: radial-gradient(
       circle farthest-side at top right,
-      color-mix(in srgb, var(--marble) 50%, transparent 50%),
+      color-mix(in srgb, var(--marble) 70%, transparent 30%),
       color-mix(in srgb, var(--marble) 80%, var(--sapphire) 20%)
     ),
     radial-gradient(
       ellipse farthest-corner at 0% 100%,
-      color-mix(in srgb, var(--marble) 50%, transparent 50%),
+      color-mix(in srgb, var(--marble) 70%, transparent 30%),
       color-mix(in srgb, var(--marble) 80%, var(--ruby) 20%)
     );
 
